# ctf-tool

./: .clang-format  .gitignore  CMakeLists.txt  CTFTool.cpp  LICENSE  README.md
ctf-tool/: CMakeLists.txt
ctf-tool/include/ctf-tool/: config.h  flag_format.h  include.h  input.h  key.h  operation.h  output.h  terminal.h  worker.h  workerpool.h
ctf-tool/include/ctf-tool/operations/: base64.h  hex.h  operations.h  pass_through.h  rot13.h  xor.h
ctf-tool/src/: config.cpp  flag_format.cpp  input.cpp  key.cpp  operation.cpp  output.cpp  terminal.cpp  worker.cpp  workerpool.cpp
ctf-tool/src/operations/: base64.cpp  hex.cpp  pass_through.cpp  rot13.cpp  xor.cpp
tests/: CMakeLists.txt  tests.cpp
